--- a/Project1/index.html
+++ b/Project1/index.html
@@ -4,6 +4,7 @@
     <title>Project 1</title>
     <script src="./index.js" defer></script>
     <link rel="stylesheet" href="./index.css">
+    <script src='./app.js' defer></script>
 </head>
 
 <body>
